samples/_failures_safe/1761374134_5f115b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d548864.c: In function ‘main’:
./samples/SAFE/__tmp_8d548864.c:170:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  170 |     size_t len
      |     ^~~~~~
./samples/SAFE/__tmp_8d548864.c:170:5: error: expected declaration or statement at end of input
